<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_storage">Storage</string>
<string name="lbl_logout">Logout</string>
<string name="msg_check_your_app">Check your app\'s UI from the below demo screens of your app.</string>
<string name="msg_lorem_ipsum_is">Lorem ipsum is a dummy text</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum

Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor.</string>
<string name="msg_third_party_sof">Third-party software</string>
<string name="lbl_version">Version</string>
<string name="lbl_privacy_policy">Privacy Policy</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="lbl_about_us">About Us</string>
<string name="lbl_lorem_ipsum">Lorem Ipsum</string>
<string name="msg_terms_and_condi">Terms and Conditions</string>
<string name="lbl_support">Support</string>
</resources>
