<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="aboutUs1VM" type="com.application.app.modules.aboutus1.data.viewmodel.AboutUs1VM"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linear1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/image"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_36pxv"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_width="@dimen/_36pxh" android:src="@drawable/img_icon_7"/>
                <TextView android:gravity="top|center"
                    android:id="@+id/txtAboutUs"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_50pxh"
                    android:layout_weight="0.46"
                    android:layout_width="0dp"
                    android:text="@{aboutUs1VM.aboutUs1Model.txtAboutUs}"
                    style="@style/textStylePoppinssemibold16" tools:text="@string/lbl_about_us"/>
                <ImageView android:id="@+id/image1"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_36pxv"
                    android:layout_marginStart="@dimen/_50pxh"
                    android:layout_width="@dimen/_36pxh" android:src="@drawable/img_group_7"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:id="@+id/scrollView"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linear2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="@color/white_A700"
                    app:cardCornerRadius="@dimen/_8pxh"
                    app:cardElevation="@dimen/_1pxh"
                    app:cardUseCompatPadding="true" style="@style/groupStylewhite_A700cornerRadius">
                    <LinearLayout android:id="@+id/linear3"
                        android:layout_gravity="center|start"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_23pxv"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_marginTop="@dimen/_23pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtVersion"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtVersion}"
                            style="@style/textStylePoppinssemibold16_1" tools:text="@string/lbl_version"/>
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtLoremIpsumIs"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtLoremIpsumIs}"
                            style="@style/textStylePoppinsregular14" tools:text="@string/msg_lorem_ipsum_is"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <LinearLayout android:id="@+id/linear4"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <LinearLayout android:id="@+id/linear5"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_marginTop="@dimen/_23pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtThirdPartySof"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtThirdPartySof}"
                            style="@style/textStylePoppinssemibold16_1" tools:text="@string/msg_third_party_sof"/>
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtLoremIpsumIs1"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtLoremIpsumIs1}"
                            style="@style/textStylePoppinsregular14" tools:text="@string/msg_lorem_ipsum_is"/>
                    </LinearLayout>
                    <View android:background="@color/blue_50"
                        android:id="@+id/line"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_17pxh"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_285pxh"/>
                    <LinearLayout android:id="@+id/linear6"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtTermsAndCondi"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtTermsAndCondi}"
                            style="@style/textStylePoppinssemibold16_1" tools:text="@string/msg_terms_and_condi"/>
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtLoremIpsumIs2"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtLoremIpsumIs2}"
                            style="@style/textStylePoppinsregular14" tools:text="@string/msg_lorem_ipsum_is"/>
                    </LinearLayout>
                    <View android:background="@color/blue_50"
                        android:id="@+id/line1"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_17pxh"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_285pxh"/>
                    <LinearLayout android:id="@+id/linear7"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtPrivacyPolicy"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtPrivacyPolicy}"
                            style="@style/textStylePoppinssemibold16_1" tools:text="@string/lbl_privacy_policy"/>
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtLoremIpsumIs3"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtLoremIpsumIs3}"
                            style="@style/textStylePoppinsregular14" tools:text="@string/msg_lorem_ipsum_is"/>
                    </LinearLayout>
                </LinearLayout>
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView1"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="@color/white_A700"
                    app:cardCornerRadius="@dimen/_8pxh"
                    app:cardElevation="@dimen/_1pxh"
                    app:cardUseCompatPadding="true" style="@style/groupStylewhite_A700cornerRadius">
                    <LinearLayout android:id="@+id/linear8"
                        android:layout_gravity="center|start"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_23pxv"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_marginTop="@dimen/_23pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtSupport"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtSupport}"
                            style="@style/textStylePoppinssemibold16_1" tools:text="@string/lbl_support"/>
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtLoremIpsumIs4"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtLoremIpsumIs4}"
                            style="@style/textStylePoppinsregular14" tools:text="@string/msg_lorem_ipsum_is"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <LinearLayout android:id="@+id/linear9"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <LinearLayout android:id="@+id/linear10"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_marginTop="@dimen/_23pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtStorage"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtStorage}"
                            style="@style/textStylePoppinssemibold16_1" tools:text="@string/lbl_storage"/>
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtLoremIpsumIs5"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtLoremIpsumIs5}"
                            style="@style/textStylePoppinsregular14" tools:text="@string/msg_lorem_ipsum_is"/>
                    </LinearLayout>
                    <View android:background="@color/blue_50"
                        android:id="@+id/line2"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_17pxh"
                        android:layout_marginStart="@dimen/_17pxh"
                        android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_285pxh"/>
                    <LinearLayout android:id="@+id/linear11"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtLogout"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtLogout}"
                            style="@style/textStylePoppinssemibold16_1" tools:text="@string/lbl_logout"/>
                        <TextView android:gravity="top|start"
                            android:id="@+id/txtLoremIpsumIs6"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="match_parent"
                            android:text="@{aboutUs1VM.aboutUs1Model.txtLoremIpsumIs6}"
                            style="@style/textStylePoppinsregular14" tools:text="@string/msg_lorem_ipsum_is"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
