<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="appNavigationVM" type="com.application.app.modules.appnavigation.data.viewmodel.AppNavigationVM"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linear1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <TextView android:gravity="center|start"
                android:id="@+id/txtAppNavigation"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:text="@{appNavigationVM.appNavigationModel.txtAppNavigation}"
                style="@style/textStyleregular20" tools:text="@string/lbl_app_navigation"/>
            <TextView android:gravity="center|start"
                android:id="@+id/txtCheckYourApp"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_width="match_parent"
                android:text="@{appNavigationVM.appNavigationModel.txtCheckYourApp}"
                style="@style/textStyleregular16" tools:text="@string/msg_check_your_app"/>
            <View android:background="@color/black_900"
                android:id="@+id/line"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
        </LinearLayout>
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true" android:id="@+id/scrollView"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linear2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700">
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear3"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtAboutUs"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtAboutUs}"
                        style="@style/textStyleregular20" tools:text="@string/lbl_about_us"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line1"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
                <LinearLayout android:clickable="true"
                    android:id="@+id/linear4"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700">
                    <TextView android:gravity="center|start"
                        android:id="@+id/txtAboutUs1"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_20pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:text="@{appNavigationVM.appNavigationModel.txtAboutUs1}"
                        style="@style/textStyleregular20" tools:text="@string/lbl_about_us"/>
                    <View android:background="@color/bluegray_400"
                        android:id="@+id/line2"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_375pxh"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
